# engine-sim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  name.txt
.github/workflows/: cmake.yml
assets/: assets.blend  assets.dia  assets.ysce  i5.mr  icosphere.dia  icosphere.ysce  main.mr  oscillator_data_left.csv  oscillator_data_left_01.csv  oscillator_data_left_02.csv  oscillator_data_right.csv  oscillator_data_right_01.csv  test.mr
assets/engines/atg-video-1/: 01_honda_trx520.mr  02_kohler_ch750.mr  03_harley_davidson_shovelhead.mr  04_hayabusa.mr  05_honda_vtec.mr  06_subaru_ej25.mr  07_audi_i5.mr  08_radial_5.mr  README.md
assets/engines/atg-video-2/: 01_subaru_ej25_eh.mr  02_subaru_ej25_uh.mr  03_2jz.mr  03_2jz2.mr  04_60_degree_v6.mr  05_odd_fire_v6.mr  06_even_fire_v6.mr  07_gm_ls.mr  08_ferrari_f136_v8.mr  09_radial_9.mr  10_lfa_v10.mr  11_merlin_v12.mr  12_ferrari_412_t2.mr  README.md  radial.mr
assets/engines/audi/: i5.mr
assets/engines/bmw/: BMW_M3_E46  M52B28.mr  s54.mr
assets/engines/chevrolet/: chev_truck_454.mr  engine_03_for_e1.mr
assets/engines/fiat/: punto_hgt.mr
assets/engines/kohler/: kohler_ch750.mr
assets/engines/subaru/: boxer.mr
assets/part-library/: cam_lobes.mr  camshafts.mr  heads.mr  ignition_modules.mr  part_library.mr
assets/part-library/engines/: engines.mr  kohler_ch750.mr
assets/part-library/parts/: camshafts.mr  ignition_modules.mr  intakes.mr
assets/themes/: amateur.mr  amateur_metric.mr  bubble_gum.mr  bubble_gum_metric.mr  default.mr  default_metric.mr  minimalistic.mr  minimalistic_metric.mr  night_vision.mr  night_vision_metric.mr  paper.mr  paper_metric.mr
assets/video-scripts/454-tuning/: engine_01.mr  engine_02.mr  engine_03.mr  engine_04.mr
config-loader/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectingdialog.cpp  selectingdialog.h  selectingdialog.ui
config-loader/resources/: resources.qrc
configuration/: delta.conf
dependencies/: CMakeLists.txt
dependencies/discord/: CMakeLists.txt  Discord.cpp  Discord.h  discord_register.h  discord_rpc.h
dependencies/discord/lib/: discord-rpc.lib
dependencies/submodules/: CMakeLists.txt
es/: engine_sim.mr
es/actions/: actions.mr
es/constants/: constants.mr  units.mr
es/infrastructure/: infrastructure.mr
es/objects/: objects.mr
es/part-library/parts/: cam_lobes.mr  camshafts.mr  heads.mr  ignition_modules.mr
es/settings/: application_settings.mr
es/sound-library/: impulse_responses.mr
es/types/: atomic_types.mr  conversions.mr  operations.mr
es/utilities/: utilities.mr
es/vehicle-library/: vehicle_library.mr
include/: adaptive_volume_filter.h  afr_cluster.h  application_settings.h  articulated_pendulum_application.h  audio_buffer.h  build_info.h.in  butterworth_low_pass_filter.h  camshaft.h  combustion_chamber.h  combustion_chamber_object.h  connecting_rod.h  connecting_rod_object.h  constants.h  constraint.h  convolution_filter.h  crankshaft.h  crankshaft_friction.h  crankshaft_load.h  crankshaft_object.h  csv_io.h  cylinder_bank.h  cylinder_bank_object.h  cylinder_head.h  cylinder_head_object.h  cylinder_pressure_gauge.h  cylinder_temperature_gauge.h  delay_filter.h  delta.h  derivative_filter.h  direct_throttle_linkage.h  discord.h  double_pendulum_application.h  dtv.h  dynamometer.h  engine.h  engine_load.h  engine_sim_application.h  engine_simulator.h  engine_view.h  euler_solver.h  (+74 more)
project/: delta-template-shared-workspace.sln  delta-template.sln
project/delta-template/: delta-template.vcxproj  delta-template.vcxproj.filters
scripting/include/: actions.h  camshaft_node.h  channel_types.h  compiler.h  connecting_rod_node.h  crankshaft_node.h  cylinder_bank_node.h  cylinder_head_node.h  engine_context.h  engine_node.h  engine_sim.h  exhaust_system_node.h  fuel_node.h  function_node.h  ignition_module_node.h  ignition_wire_node.h  impulse_response_node.h  intake_node.h  language_rules.h  node.h  object_reference_node.h  object_reference_node_output.h  piranha.h  piston_node.h  rod_journal_node.h  set_application_settings_node.h  set_vehicle_node.h  standard_valvetrain_node.h  throttle_nodes.h  transmission_node.h  valvetrain_node.h  vehicle_node.h  vtec_valvetrain_node.h
scripting/src/: channel_types.cpp  compiler.cpp  engine_context.cpp  language_rules.cpp
scripts/: copy_dlls.py  fetch_local_delta_build.py  increment_build_version.py  package_application.py  package_build.py  standard_logging.py
src/: afr_cluster.cpp  articulated_pendulum_application.cpp  audio_buffer.cpp  camshaft.cpp  combustion_chamber.cpp  combustion_chamber_object.cpp  connecting_rod.cpp  connecting_rod_object.cpp  constraint.cpp  convolution_filter.cpp  crankshaft.cpp  crankshaft_friction.cpp  crankshaft_load.cpp  crankshaft_object.cpp  cylinder_bank.cpp  cylinder_bank_object.cpp  cylinder_head.cpp  cylinder_head_object.cpp  cylinder_pressure_gauge.cpp  cylinder_temperature_gauge.cpp  delay_filter.cpp  derivative_filter.cpp  direct_throttle_linkage.cpp  discord.cpp  double_pendulum_application.cpp  dynamometer.cpp  engine.cpp  engine_load.cpp  engine_sim_application.cpp  engine_simulator.cpp  engine_view.cpp  euler_solver.cpp  exhaust_system.cpp  feedback_comb_filter.cpp  filter.cpp  firing_order_display.cpp  fixed_position_constraint.cpp  force_generator.cpp  fuel.cpp  fuel_cluster.cpp  (+62 more)
test/: function_test.cpp  gas_system_tests.cpp  synthesizer_tests.cpp
